--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "dexie": "^3.2.1",
+    "dexie-react-hooks": "^1.1.1",
     "framer-motion": "^6.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
