--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stock-watch-list",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^18.0.1",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
+    "express": "^4.17.3",
     "framer-motion": "^6.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -25,7 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
